Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(B.shape)\n",
+    "B = B.T\n",
+    "print (B.shape)\n",
+    "B"
    ]
   },
   {
