Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -520,7 +520,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "np.linalg(solve(A,))"
    ]
   },
   {
