--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "# Code here \n",
-    "np.linalg(solve(A,))"
+    "np.linalg.solve(A,B)"
    ]
   },
   {
